Bug 24845 - Size Chart not visible on Online Ordering App

--- a/skins/weborder/css/main.css
+++ b/skins/weborder/css/main.css
@@ -364,6 +364,9 @@ footer {
     margin: 0 20px;
     text-decoration: none;
 }
+.size_chart {
+    margin: 0;
+}
 
 /* Mercury accepted credit card */
 .mercury-accepted-credit-cards {
